Updates to delete
