# takeTheWheel/lFemales.js
@@ -38,14 +38,14 @@ const deleteFA = async (req, res) => {
         return;
     }
 
-    const lFemaleId = new ObjectId(req.params.id);
+    const lFemalesId = new ObjectId(req.params.id);
 
     try {
-        const response = await mongodb.getDb().db('').collection('lFemales').deleteOne({
-            _id: lFemaleId
+        const response = await mongodb.getDb().db('familyRoutes').collection('lFemales').deleteOne({
+            _id: lFemalesId
         }, true);
         console.log(response);
-        if (response.removeValhalla > 0) {
+        if (response.deleteFA > 0) {
             res.status(200).send();
         }
     } catch (err) {
@@ -53,11 +53,71 @@ const deleteFA = async (req, res) => {
     }
 };
 
+//put
+const putFemmeFatale = async (req, res) => {
+    try{
+      validatelFemales(req.body)
+      if (!ObjectId.isValid(req.params.id)) {
+      res.status(400).json('Must use a id to update.');
+    }
+    const lFemaleId = new ObjectId(req.params.id);
+    const Femme = {
+        firstName: req.body.firstName,
+        lastName: req.body.lastName,
+        birthYear: req.body.birthYear,
+        birthLocation: req.body.birthLocation,
+        deathYear: req.body.deathYear,
+        deathLocation: req.body.deathLocation,
+    };
+    const response = await mongodb.getDb().db().collection('lFemales').replaceOne(
+        { _id: lFemaleId },
+        Femme);
+  // console.log(response);
+  if (response.modifiedCount > 0) 
+{
+    res.status(204).send();
+  } else {
+    res.status(500).json(response.error || 'Some error occurred while updating the living female.');
+  }}
+  catch(err){
+    res.status(400).json({ message: err.message });
+  }
+  };  
 
-
+  // GET ALL: retrieve all living females from database
+const getAll = async (req, res, next) => {
+    try{
+    const result = await mongodb.getDb().db('familyRoutes').collection('lFemales').find();
+    result.toArray().then((lists) => {
+      res.setHeader('Content-Type', 'application/json');
+      res.status(200).json(lists); 
+    });
+  }catch(error){
+    res.status(500).json({message : error})
+    }
+  };
+// GET SINGLE: retrieve a single living female from database
+const getSingle = async (req, res, next) => {
+    try{
+    const userId = new ObjectId(req.params.id);
+    const result = await mongodb.getDb().db('familyRoutes').collection('lFemales').find({_id:userId});
+    if (!result){
+      res.status(404).json({message : "unable to find ID"})
+    }
+    result.toArray().then((lists) => {
+      res.setHeader('Content-Type', 'application/json');
+      res.status(200).json(lists[0]); // we just need the first one (the only one)
+    });
+  }catch(error){
+    res.status(500).json({message : "unable to get ID, make sure you have entered a valid ID"})
+    }
+  };
 
 
 module.exports = {
     fataleAttraction,
-    deleteFA
+    deleteFA,
+    putFemmeFatale,
+    getAll,
+    getSingle
 }
